--- a/pytorch/tf_cookbook.ipynb
+++ b/pytorch/tf_cookbook.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "- 基本概念\n",
     "    - tf.logging\n",
+    "    - tf.summary\n",
+    "    - tf.Print\n",
     "    - 数据类型 \n",
     "    - 激活函数\n",
     "    - 损失函数\n",
@@ -27,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +38,7 @@
        "'1.10.0'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -71,10 +73,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# tf.summary: 能够保存训练过程以及参数分布图并在tensorboard显示\n",
+    "    # tf.summary.scalar(tags, values, collections=None, name=None): 用来显示标量信息"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tf.Print(input, data, message=None, summarize=None, name=None)\n",
+    "    # 最低要求两个输入，input和data，input是需要打印的变量的名字，data要求是一个list，里面包含要打印的内容\n",
+    "    # message是需要输出的错误信息\n",
+    "    # summarize是对每个tensor只打印的条目数量，如果是None，对于每个输入tensor只打印3个元素\n",
+    "    # name是op的名字"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=tf.constant([2,3,4,5])\n",
+    "x=tf.Print(x,[x,x.shape,'test', x],message='Debug message:',summarize=2)\n",
+    "with tf.Session() as sess:\n",
+    "    print(x.eval())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# dtype\n",
     "    # tf.int64\n",
     "    # tf.float32\n",
-    "    # tf.bool"
+    "    # tf.bool\n",
+    "# tf.to_float"
    ]
   },
   {
@@ -95,7 +141,9 @@
    "outputs": [],
    "source": [
     "# 损失函数\n",
-    "    # tf.nn.sigmoid_cross_entropy_with_logits"
+    "    # tf.nn.sigmoid_cross_entropy_with_logits\n",
+    "\n",
+    "# tf.keras.backend.binary_crossentropy"
    ]
   },
   {
@@ -138,6 +186,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# tf.one_hot(indices, depth)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tf.random_normal(shape=[2,3], mean=0, stddev=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# tf.SparseTensor(values,indices,dense_shape)：三个参数均可使用np.array定义，定义稀疏tensor，可以节省内存\n",
     "# tf.sparse_tensor_to_dense(sp_input,default_value=0)：将 SparseTensor 转换为稠密张量\n",
     "# tf.sparse_to_dense(sparse_indices, output_shape, sparse_values, default_value=0)"
@@ -149,7 +215,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tf.Variable(initial_value=0, name=\"global_step\", trainable=False, dtype=tf.int64)"
+    "# tf.Variable()和tf.get_variable()有不同的创建变量的方式：\n",
+    "    # tf.Variable() 每次都会新建变量。如果希望重用（共享）一些变量，就需要用到了get_variable()，它会去搜索变量名，有就直接用，没有再新建\n",
+    "# tf.Variable(initial_value=0, name=\"...\", trainable=False, dtype=tf.int64, collections=[...])\n",
+    "# tf.get_variable(name=\"...\", shape, collections=[...], initializer=tf.truncated_normal_initializer(stddev=0.001))"
    ]
   },
   {
@@ -158,7 +227,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tf.get_variable(name=\"\", shape=[,], collections=[模型变量集合名称, tf.GraphKeys.GLOBAL_VARIABLES, ops.GraphKeys.MODEL_VARIABLES], initializer=tf.truncated_normal_initializer(stddev=0.001))"
+    "# from tensorflow.contrib.framework.python.ops import variables as contrib_variables\n",
+    "# contrib_variables.model_variable('...', shape, initializer=tf.zeros_initializer(), trainable)\n",
+    "\n",
+    "# from tensorflow.python.ops import nn_ops\n",
+    "# nn_ops.bias_add"
    ]
   },
   {
@@ -196,7 +269,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tf.pow | tf.square | tf.add | tf.sqrt"
+    "# tf.pow | tf.square | tf.add | tf.sqrt | tf.exp"
    ]
   },
   {
@@ -304,12 +377,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor 'SequenceMask/Less:0' shape=(3, 5) dtype=bool>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.sequence_mask(tf.constant([2,3,4]), 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# tf.assign(A, new_number)：这个函数的功能主要是把A的值变为new_number\n",
     "# tf.assign_add(ref,value)：更新ref的值，通过增加value，即：ref = ref + value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tf.cond()类似于if...else..."
    ]
   },
   {
@@ -325,7 +427,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# with arg_scope(self_define_arg_scope(weight_decay=...)):"
+    "# TensorFlow变量作用域\n",
+    "    # tf.name_scope()、tf.variable_scope()是两个作用域函数，一般与两个创建/调用变量的函数tf.Variable() 和tf.get_variable()搭配使用。常用于：1）变量共享；2）tensorboard画流程图进行可视化封装变量\n",
+    "    # tf.name_scope()/命名域、tf.variable_scope()/变量域会在模型中开辟各自的空间，而其中的变量均在这个空间内进行管理\n",
+    "        # 命名域还可由tf.op_scope创建，变量域还可由tf.variable_op_scope创建\n",
+    "        # 对于上述两种作用域，对于使用tf.Variable()方式创建的变量，具有相同的效果，都会在变量名称前面，加上域名称。对于通过tf.get_variable()方式创建的变量，只有variable scope名称会加到变量名称前面，而name scope不会作为前缀\n",
+    "    # variable_scope可以通过设置reuse标志以及初始化方式来影响域下的变量，因为想要达到变量共享的效果, 就要在 tf.variable_scope()的作用域下使用 tf.get_variable() 这种方式产生和提取变量. 不像 tf.Variable() 每次都会产生新的变量, tf.get_variable() 如果遇到了已经存在名字的变量时, 它会单纯的提取这个同样名字的变量，如果不存在名字的变量再创建\n",
+    "    # 必须要在tf.variable_scope的作用域下使用tf.get_variable()函数。这里用tf.get_variable( ) 而不用tf.Variable( )，是因为前者拥有一个变量检查机制，会检测已经存在的变量是否设置为共享变量，如果已经存在的变量没有设置为共享变量，TensorFlow 运行到第二个拥有相同名字的变量的时候，就会报错\n",
+    "    # with tf.variable_scope(name_or_scope=\"...\", reuse=tf.AUTO_REUSE) as scope:\n",
+    "    # with tf.name_scope(\"...\"):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "var1:0\n",
+      "my_name_scope/var2:0\n",
+      "my_name_scope/Add:0\n"
+     ]
+    }
+   ],
+   "source": [
+    "with tf.name_scope(\"my_name_scope\"):\n",
+    "    v1 = tf.get_variable(\"var1\", [1], dtype=tf.float32) \n",
+    "    v2 = tf.Variable(1, name=\"var2\", dtype=tf.float32)\n",
+    "    a = tf.add(v1, v2)\n",
+    "    print(v1.name)\n",
+    "    print(v2.name) \n",
+    "    print(a.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my_variable_scope/var1:0\n",
+      "my_variable_scope/var2:0\n",
+      "my_variable_scope/Add:0\n"
+     ]
+    }
+   ],
+   "source": [
+    "with tf.variable_scope(\"my_variable_scope\"):\n",
+    "    v1 = tf.get_variable(\"var1\", [1], dtype=tf.float32)\n",
+    "    v2 = tf.Variable(1, name=\"var2\", dtype=tf.float32)\n",
+    "    a = tf.add(v1, v2)\n",
+    "    print(v1.name) \n",
+    "    print(v2.name)\n",
+    "    print(a.name)"
    ]
   },
   {
@@ -334,7 +494,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# with tf.variable_scope(name_or_scope=\"...\", partitioner=self_define_partitioner(ps_num, partition_size), reuse=tf.AUTO_REUSE) as scope:"
+    "from tensorflow.python.ops import variable_scope\n",
+    "# with variable_scope.variable_scope(\"name\",reuse=tf.AUTO_REUSE):"
    ]
   },
   {
@@ -343,16 +504,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# with variable_scope.variable_scope(\"hiddenlayer_name\",reuse=tf.AUTO_REUSE) as hidden_layer_scope:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# with tf.name_scope(\"...\"):"
+    "from tensorflow.contrib.framework.python.ops import arg_scope\n",
+    "# with arg_scope(): 指定网络的默认参数；第一个参数如[layers.conv2d]表示要执行操作的网络，后续的参数就是要设定默认的参数"
    ]
   },
   {
@@ -380,10 +533,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# layers.input_from_feature_columns(columns_to_tensors=self.features,feature_columns=[feature_column],scope=tf.variable_scope)\n",
-    "# layers.fully_connected(输入, 输出维度, activation_fn=tf.nn.softmax, variables_collections=模型变量名称, outputs_collections=模型变量名称, scope=variable_scope.variable_scope)\n",
-    "# layers.linear(输入, 输出维度, scope=tf.variable_scope, variables_collections=[模型变量名称], outputs_collections=[模型变量名称])\n",
-    "# layers.batch_norm(input_vec, scale=True, is_training=self.is_training,scope=variable_scope.variable_scope, variables_collections=模型变量名称, outputs_collections=模型变量名称)"
+    "# layers.input_from_feature_columns(columns_to_tensors,feature_columns,scope=tf.variable_scope)\n",
+    "# layers.fully_connected(输入, 输出维度, activation_fn=tf.nn.softmax, variables_collections, outputs_collections, scope)\n",
+    "# layers.linear(输入, 输出维度, scope, variables_collections, outputs_collections)\n",
+    "# layers.batch_norm(input_vec, scale=True, is_training, scope, variables_collections, outputs_collections)"
    ]
   },
   {
@@ -399,7 +552,7 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "dbbf180547979de83b0f3e635da0b334b607bbd5ed71c61d1ea69a8ffcc4665b"
+   "hash": "f731b860690565808261aa16d59807e4733507b408e88bbb2c86737b8c69cb28"
   },
   "kernelspec": {
    "display_name": "Python 3.6.13 64-bit ('tfone': conda)",
