--- a/leetcodes/basics.ipynb
+++ b/leetcodes/basics.ipynb
@@ -65,6 +65,7 @@
     "    - zipfile\n",
     "    - 文件读写\n",
     "- 拷贝: copy\n",
+    "- pickle\n",
     "- xlrd\n",
     "- datetime\n",
     "- random\n",
@@ -2214,6 +2215,34 @@
     "print('b = ', b)\n",
     "print('c = ', c)\n",
     "print('d = ', d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pickle.HIGHEST_PROTOCOL: 这是一个整数，表示最高可用的协议版本。这个值可以作为参数protocol传给函数dump()和dumps()\n",
+    "    # 对应的协议5是3.8中的\n",
+    "# pickle.DEFAULT_PROTOCOL: 这是一个整数，表示用来pickling的默认协议版本。可能比pickle.HIGHEST_PROTOCOL小。目前默认的协议版本是3，协议3是专门为Python3设计的一种新的协议"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pickle.dump(obj, file, protocol=None)\n",
+    "# pickle.load(file)"
    ]
   },
   {
@@ -5070,16 +5099,8 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": ""
   },
   "metadata": {
    "interpreter": {
