--- a/pytorch/tf_cookbook.ipynb
+++ b/pytorch/tf_cookbook.ipynb
@@ -8,6 +8,7 @@
     "    - tf.logging\n",
     "    - tf.summary\n",
     "    - tf.Print\n",
+    "    - sess\n",
     "    - 数据类型 \n",
     "    - 激活函数\n",
     "    - 损失函数\n",
@@ -116,6 +117,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# sess\n",
+    "# sess.run()这个里面只能放operation和tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = tf.constant(1)\n",
+    "sess = tf.InteractiveSession()\n",
+    "print(x.eval())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# dtype\n",
     "    # tf.int64\n",
     "    # tf.float32\n",
@@ -164,11 +194,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(\"Const_2:0\", shape=(3,), dtype=int32)\n",
+      "[1 2 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = tf.constant([1,2,3])\n",
+    "print(a)\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "    print(sess.run(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tf.identity(input_tensor)：返回一个和input_tensor形状相同的tensor"
+    "# tf.identity(input_tensor)：返回一个和input_tensor形状、内容都相同的tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = tf.identity(a)\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "    print(sess.run(b))"
    ]
   },
   {
@@ -196,6 +268,15 @@
    "outputs": [],
    "source": [
     "# tf.random_normal(shape=[2,3], mean=0, stddev=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 不能直接将tf.Tensor作为bool"
    ]
   },
   {
@@ -293,6 +374,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.3102722  -0.9942122  -1.876304  ]\n",
+      " [-0.16043976 -0.2800879   0.8441572 ]]\n",
+      "[array([ 0.57491624, -0.63715005, -0.5160734 ], dtype=float32), array([0.5407484 , 0.12749338, 1.8502275 ], dtype=float32)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 计算均值和方差\n",
+    "img = tf.Variable(tf.random_normal([2, 3]))\n",
+    "mean, variance = tf.nn.moments(img, axes=0)\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "    print(sess.run(img))\n",
+    "    print(sess.run([mean, variance]))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -306,7 +412,8 @@
    "outputs": [],
    "source": [
     "# tensor.get_shape().as_list()\n",
-    "# tf.shape：获取张量的形状\n",
+    "# tf.shape：获取张量的形状；返回的是一个tensor\n",
+    "# tensorflow打印张量shape，如遇自定义变量(batch size)则会显示None\n",
     "# tf.reshape(tensor, shape)：若shape为[]，输出标量；若shape为[-1]，则展平张量\n",
     "# tf.expand_dims(input,axis=None)：在axis轴处给input增加一个维度"
    ]
@@ -337,6 +444,29 @@
    "outputs": [],
    "source": [
     "# tf.split(input_tensor,num_or_size_splits,axis=0)：num_or_size_splits如果是个整数n，就将输入的tensor分为n个子tensor。如果是个list T，就将输入的tensor分为len(T)个子tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "[array([[-0.3797491 ,  0.39872998, -0.23381083]], dtype=float32), array([[-1.3213638 , -0.13312116, -1.4646379 ]], dtype=float32)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = tf.random_normal([2,3])\n",
+    "cs = tf.split(c, 2, axis=0)\n",
+    "print(type(cs))\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "    print(sess.run(cs))"
    ]
   },
   {
