--- a/leetcodes/basics.ipynb
+++ b/leetcodes/basics.ipynb
@@ -66,6 +66,8 @@
     "    - 文件读写\n",
     "- 拷贝: copy\n",
     "- pickle\n",
+    "- argparse\n",
+    "- importlib\n",
     "- xlrd\n",
     "- datetime\n",
     "- random\n",
@@ -2243,6 +2245,43 @@
    "source": [
     "# pickle.dump(obj, file, protocol=None)\n",
     "# pickle.load(file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### argparse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 创建一个解析器——创建 ArgumentParser() 对象\n",
+    "    # parser = argparse.ArgumentParser(description)\n",
+    "# 添加参数——调用 add_argument() 方法添加参数\n",
+    "    # 该函数的参数\n",
+    "        # required - 可选参数是否可以省略 (仅针对可选参数)\n",
+    "# args = parser.parse_args()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### importlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# importlib.import_module('b.c.c') # 绝对导入"
    ]
   },
   {
