--- a/pytorch/tf_cookbook.ipynb
+++ b/pytorch/tf_cookbook.ipynb
@@ -8,6 +8,8 @@
     "    - tf.logging\n",
     "    - tf.summary\n",
     "    - tf.Print\n",
+    "    - tf.estimator\n",
+    "    - tf.data\n",
     "    - sess\n",
     "    - 数据类型 \n",
     "    - 激活函数\n",
@@ -109,6 +111,53 @@
     "x=tf.Print(x,[x,x.shape,'test', x],message='Debug message:',summarize=2)\n",
     "with tf.Session() as sess:\n",
     "    print(x.eval())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tf.estimator\n",
+    "    # tf.estimator.RunConfig\n",
+    "    # tf.estimator.Estimator(model_fn, config, params, model_dir)，\n",
+    "        # model_fn为自定义的网络模型函数\n",
+    "        # config用于控制内部和checkpoints等\n",
+    "        # params该参数的值会传递给model_fn\n",
+    "        # model_dir指定checkpoints和其他日志存放的路径\n",
+    "        # estimator.predict\n",
+    "    # tf.estimator.experimental.stop_if_no_decrease_hook:\n",
+    "        # 定义early_stopping\n",
+    "        # 参数:\n",
+    "            # estimator: 模型\n",
+    "            # metric_name: 需要追踪的评估指标名称\n",
+    "            # max_steps_without_increase: 指定评估指标没有提升的情况下最大运行步数\n",
+    "    # tf.estimator.TrainSpec(input_fn, max_steps=None, hooks=None)\n",
+    "        # input_fn: 用来指定数据输入\n",
+    "        # max_steps: 用来指定训练的最大步数\n",
+    "        # hooks: 用来在 session 运行的时候做一些额外的操作\n",
+    "    # tf.estimator.EvalSpec(input_fn, steps, throttle_secs)\n",
+    "        # steps: 用来指定评估的迭代步数，如果为None，则在整个数据集上评估\n",
+    "        # throttle_secs: 多少秒后又开始评估，如果没有新的 checkpoints 产生，则不评估，所以这个间隔是最小值\n",
+    "    # tf.estimator.train_and_evaluate(estimator, train_spec, eval_spec)\n",
+    "    # tf.estimator.EstimatorSpec\n",
+    "    # tf.estimator.ModeKeys.PREDICT\n",
+    "    # tf.estimator.ModeKeys.EVAL\n",
+    "    # tf.estimator.ModeKeys.PREDICT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tf.data\n",
+    "    # tf.data.TextLineDataset\n",
+    "        # 可处理csv和libsvm文件\n",
+    "    # tf.data.TFRecordDataset\n",
+    "        # 可处理tfrecord文件"
    ]
   },
   {
@@ -689,16 +738,8 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": ""
   },
   "orig_nbformat": 4
  },
