--- a/tensorflow/tf_cookbook.ipynb
+++ b/tensorflow/tf_cookbook.ipynb
@@ -17,6 +17,7 @@
     "- 变量\n",
     "- 常见张量计算\n",
     "- 常见张量操作\n",
+    "- 基本流程\n",
     "- 构建网络\n",
     "    - scope\n",
     "    - 嵌入层及其他网络层\n",
@@ -591,6 +592,31 @@
    "outputs": [],
    "source": [
     "# tf.cond()类似于if...else..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 基本流程"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# b = tf.Variable(tf.zeros([100])) # 100维向量\n",
+    "# W = tf.Variable(tf.random_uniform([784, 100], -1, 1))\n",
+    "# x = tf.placeholder(dtype=tf.float32, name=\"x\")\n",
+    "# relu = tf.nn.relu(tf.matmul(W, x)+b)\n",
+    "# C = [...] # Cost\n",
+    "# s = tf.Session()\n",
+    "# for step in range(0, 10):\n",
+    "#     input = 100维向量\n",
+    "#     result = s.run(C, feed_dict={x:input})\n",
+    "#     print(step, result)"
    ]
   },
   {
