--- a/leetcodes/basics.ipynb
+++ b/leetcodes/basics.ipynb
@@ -2764,33 +2764,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.19.5\n",
-      "blas_mkl_info:\n",
-      "  NOT AVAILABLE\n",
-      "blis_info:\n",
-      "  NOT AVAILABLE\n",
-      "openblas_info:\n",
-      "    libraries = ['openblas', 'openblas']\n",
-      "    library_dirs = ['/usr/local/lib']\n",
-      "    language = c\n",
-      "    define_macros = [('HAVE_CBLAS', None)]\n",
-      "blas_opt_info:\n",
-      "    libraries = ['openblas', 'openblas']\n",
-      "    library_dirs = ['/usr/local/lib']\n",
-      "    language = c\n",
-      "    define_macros = [('HAVE_CBLAS', None)]\n",
-      "lapack_mkl_info:\n",
-      "  NOT AVAILABLE\n",
-      "openblas_lapack_info:\n",
-      "    libraries = ['openblas', 'openblas']\n",
-      "    library_dirs = ['/usr/local/lib']\n",
-      "    language = c\n",
-      "    define_macros = [('HAVE_CBLAS', None)]\n",
-      "lapack_opt_info:\n",
-      "    libraries = ['openblas', 'openblas']\n",
-      "    library_dirs = ['/usr/local/lib']\n",
-      "    language = c\n",
-      "    define_macros = [('HAVE_CBLAS', None)]\n"
+      "1.19.5\n"
      ]
     }
    ],
@@ -2798,7 +2772,45 @@
     "import numpy as np\n",
     "## numpy版本以及配置\n",
     "print(np.__version__)\n",
-    "np.show_config()"
+    "# np.show_config()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3  4]\n",
+      " [ 5  6  7  8  9]\n",
+      " [10 11 12 13 14]\n",
+      " [15 16 17 18 19]\n",
+      " [20 21 22 23 24]]\n",
+      "[[[ 0  1  2  3  4]]\n",
+      "\n",
+      " [[ 5  6  7  8  9]]\n",
+      "\n",
+      " [[10 11 12 13 14]]\n",
+      "\n",
+      " [[15 16 17 18 19]]\n",
+      "\n",
+      " [[20 21 22 23 24]]]\n",
+      "(5, 1, 5)\n",
+      "(5, 5, 1)\n",
+      "(5, 5, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(25).reshape((5,5))\n",
+    "print(a)\n",
+    "print(a[:, None])\n",
+    "print(a[:, None].shape)\n",
+    "print(a[:, :, None].shape)\n",
+    "print(a[..., None].shape)# 省略所有的冒号来用省略号代替"
    ]
   },
   {
@@ -5138,8 +5150,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": ""
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.13"
   },
   "metadata": {
    "interpreter": {
