--- a/leetcodes/basics.ipynb
+++ b/leetcodes/basics.ipynb
@@ -140,6 +140,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 在类里定义__slots__ = ('name', 'age') # 用tuple定义允许绑定的属性名称，如只允许对实例添加name和age属性\n",
+    "# 使用__slots__要注意，__slots__定义的属性仅对当前类起作用，对继承的子类是不起作用的"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -2637,6 +2647,28 @@
     "#按照value排序\n",
     "vd = collections.OrderedDict(sorted(dd.items(),key=lambda t:t[1]))\n",
     "print(vd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 20\n",
+      "10 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import namedtuple\n",
+    "coordinate = namedtuple('Coordinate', ['x', 'y'])\n",
+    "co = coordinate(10,20)\n",
+    "print(co.x,co.y)\n",
+    "print(co[0],co[1])"
    ]
   },
   {
