--- a/leetcodes/basics.ipynb
+++ b/leetcodes/basics.ipynb
@@ -116,6 +116,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ImportError: No module named 'cPickle'\n",
+    "    # python2有cPickle，但是在python3下，是没有cPickle的\n",
+    "    # 将cPickle改为pickle即可"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Python中单下划线和双下划线\n",
     "    ## __foo__:一种约定,Python内部的名字,用来区别其他用户自定义的命名,以防冲突，就是例如__init__()/构造器(当一个实例被创建的时候初始化的方法，但是它并不是实例化调用的第一个方法，__new__才是实例化对象调用的第一个方法),__del__(),__call__()/让一个类的实例像函数一样被调用 这些特殊方法，也叫魔法方法\n",
     "        # __new__是一个静态方法,而__init__是一个实例方法.\n",
@@ -5182,16 +5193,8 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": ""
   },
   "metadata": {
    "interpreter": {
