--- a/leetcodes/basics.ipynb
+++ b/leetcodes/basics.ipynb
@@ -1931,7 +1931,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ASCII: '0':48; 'A':65; 'a':97"
+    "# ASCII: '0':48; 'A':65; 'a':97\n",
+    "# 问题: SyntaxError: Non-UTF-8 code starting with '\\xbb' in file quick_start.py on line 13, but no encoding declared\n",
+    "    # 当python文件中出现中文\n",
+    "    # 解决办法为: 在文件首行添加: # -*- coding:utf-8 -*-"
    ]
   },
   {
@@ -2390,6 +2393,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from random import randint"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2478,6 +2490,17 @@
     "a =\"GEe2ks3\"\n",
     "print(list(map(f, a)))\n",
     "print(list(map(\"\".join, itertools.product(*map(f, a)))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import chain\n",
+    "# chain()可以把一组迭代对象串联起来，形成一个更大的迭代器，如列表\n",
+    "# chain.from_iterable()"
    ]
   },
   {
@@ -4455,11 +4478,243 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>I1</th>\n",
+       "      <th>I2</th>\n",
+       "      <th>I3</th>\n",
+       "      <th>I4</th>\n",
+       "      <th>I5</th>\n",
+       "      <th>I6</th>\n",
+       "      <th>I7</th>\n",
+       "      <th>I8</th>\n",
+       "      <th>I9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>C17</th>\n",
+       "      <th>C18</th>\n",
+       "      <th>C19</th>\n",
+       "      <th>C20</th>\n",
+       "      <th>C21</th>\n",
+       "      <th>C22</th>\n",
+       "      <th>C23</th>\n",
+       "      <th>C24</th>\n",
+       "      <th>C25</th>\n",
+       "      <th>C26</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1382</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2</td>\n",
+       "      <td>181</td>\n",
+       "      <td>...</td>\n",
+       "      <td>e5ba7672</td>\n",
+       "      <td>f54016b9</td>\n",
+       "      <td>21ddcdc9</td>\n",
+       "      <td>b1252a9d</td>\n",
+       "      <td>07b5194c</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3a171ecb</td>\n",
+       "      <td>c5c50484</td>\n",
+       "      <td>e8b83407</td>\n",
+       "      <td>9727dd16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>102</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>07c540c4</td>\n",
+       "      <td>b04e4670</td>\n",
+       "      <td>21ddcdc9</td>\n",
+       "      <td>5840adea</td>\n",
+       "      <td>60f6221e</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3a171ecb</td>\n",
+       "      <td>43f13e8b</td>\n",
+       "      <td>e8b83407</td>\n",
+       "      <td>731c3655</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>767</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>245</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8efede7f</td>\n",
+       "      <td>3412118d</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>e587c466</td>\n",
+       "      <td>ad3062eb</td>\n",
+       "      <td>3a171ecb</td>\n",
+       "      <td>3b183c5c</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>893</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4392</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1e88c74f</td>\n",
+       "      <td>74ef3502</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6b3a5ca6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3a171ecb</td>\n",
+       "      <td>9117a34a</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1e88c74f</td>\n",
+       "      <td>26b3c7a7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>21c9516a</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>32c7478e</td>\n",
+       "      <td>b34f3128</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 40 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   label   I1   I2    I3    I4    I5    I6  I7  I8   I9  ...       C17  \\\n",
+       "0      0  1.0    1   5.0   0.0  1382   4.0  15   2  181  ...  e5ba7672   \n",
+       "1      0  2.0    0  44.0   1.0   102   8.0   2   2    4  ...  07c540c4   \n",
+       "2      0  2.0    0   1.0  14.0   767  89.0   4   2  245  ...  8efede7f   \n",
+       "3      0  NaN  893   NaN   NaN  4392   NaN   0   0    0  ...  1e88c74f   \n",
+       "4      0  3.0   -1   NaN   0.0     2   0.0   3   0    0  ...  1e88c74f   \n",
+       "\n",
+       "        C18       C19       C20       C21       C22       C23       C24  \\\n",
+       "0  f54016b9  21ddcdc9  b1252a9d  07b5194c       NaN  3a171ecb  c5c50484   \n",
+       "1  b04e4670  21ddcdc9  5840adea  60f6221e       NaN  3a171ecb  43f13e8b   \n",
+       "2  3412118d       NaN       NaN  e587c466  ad3062eb  3a171ecb  3b183c5c   \n",
+       "3  74ef3502       NaN       NaN  6b3a5ca6       NaN  3a171ecb  9117a34a   \n",
+       "4  26b3c7a7       NaN       NaN  21c9516a       NaN  32c7478e  b34f3128   \n",
+       "\n",
+       "        C25       C26  \n",
+       "0  e8b83407  9727dd16  \n",
+       "1  e8b83407  731c3655  \n",
+       "2       NaN       NaN  \n",
+       "3       NaN       NaN  \n",
+       "4       NaN       NaN  \n",
+       "\n",
+       "[5 rows x 40 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# pandas.read_excel(path, 'sheet1')"
+    "# pandas.read_excel(path, 'sheet1')\n",
+    "import pandas as pd\n",
+    "data_path = 'test/test_pd/test.txt'\n",
+    "sparse_features = ['C' + str(i) for i in range(1, 27)]\n",
+    "dense_features = ['I' + str(i) for i in range(1, 14)]\n",
+    "column_names = ['label']+dense_features+sparse_features \n",
+    "data = pd.read_csv(data_path, sep='\\t', header=None, names=column_names)\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1.0\n",
+       "1    2.0\n",
+       "2    2.0\n",
+       "3    0.0\n",
+       "4    3.0\n",
+       "Name: I1, dtype: float64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['I1'].fillna(0,)"
    ]
   },
   {
@@ -4626,7 +4881,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df.dropna(inplace=True) 能够找到DataFrame类型数据的空值（缺失值），将空值所在的行/列删除后，将新的DataFrame作为返回值返回。参数how: 筛选方式。‘any’，表示该行/列只要有一个以上的空值，就删除该行/列；‘all’，表示该行/列全部都为空值，就删除该行/列。"
+    "# df.dropna(inplace=True) 能够找到DataFrame类型数据的空值（缺失值），将空值所在的行/列删除后，将新的DataFrame作为返回值返回\n",
+    "    # 参数how: 筛选方式。‘any’，表示该行/列只要有一个以上的空值，就删除该行/列；‘all’，表示该行/列全部都为空值，就删除该行/列。\n",
+    "# df.fillna(): 填充缺失值；仅运行该语句原对象不变，还需要赋值"
    ]
   },
   {
@@ -4686,6 +4943,17 @@
     "from sklearn import KMeans\n",
     "# kmeans = KMeans(n_clusters).fit(embeddings)\n",
     "# kmeans.labels_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from sklearn.preprocessing import LabelEncoder, MinMaxScaler\n",
+    "# from sklearn.model_selection import train_test_split\n",
+    "# from sklearn.metrics import log_loss, roc_auc_score\n"
    ]
   },
   {
@@ -5193,8 +5461,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": ""
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.13"
   },
   "metadata": {
    "interpreter": {
