--- a/tensorflow/tf_cookbook.ipynb
+++ b/tensorflow/tf_cookbook.ipynb
@@ -10,6 +10,7 @@
     "    - tf.Print\n",
     "    - tf.estimator\n",
     "    - tf.data\n",
+    "    - tf.nn\n",
     "    - sess\n",
     "    - 数据类型 \n",
     "    - 激活函数\n",
@@ -21,7 +22,8 @@
     "- 构建网络\n",
     "    - scope\n",
     "    - 嵌入层及其他网络层\n",
-    "    - 其他操作: 归一化"
+    "    - 其他操作: 归一化\n",
+    "- Keras"
    ]
   },
   {
@@ -167,6 +169,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# tf.nn\n",
+    "    # tf.nn.bias_add"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# sess\n",
     "# sess.run()这个里面只能放operation和tensor"
    ]
@@ -211,7 +223,9 @@
    "source": [
     "# 激活函数\n",
     "    # tf.nn.softmax\n",
-    "    # tf.nn.sigmoid"
+    "    # tf.nn.sigmoid\n",
+    "\n",
+    "    # tf.sigmoid"
    ]
   },
   {
@@ -239,7 +253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tf.constant(list) | tf.constant(\"\", shape=[1, 1])"
+    "# tf.constant(list) | tf.constant(list, shape=[2, 3])"
    ]
   },
   {
@@ -411,7 +425,37 @@
    "source": [
     "# 乘法\n",
     "    # tf.multiply(x, y)：两个矩阵中对应元素各自相乘\n",
-    "    # tf.matmul(a, b)：将矩阵a乘以矩阵b"
+    "    # tf.matmul(a, b)：将矩阵a乘以矩阵b\n",
+    "    # tf.tensordot(a, b, axes)\n",
+    "        # 在axes=2轴上相乘指的是将a的最后两个维度与b的前两个维度矩阵相乘，然后将结果累加求和，消除(收缩)这四个维度，矩阵a，b剩下的维度concat，就是所求矩阵维度\n",
+    "        # 在axes=[[1,3],[0,2]]上进行tensor相乘，指的是将a的第一个维度、第三个维度concat的维度与b的第0(维度下标从0开始)个维度、第二个维度concat的维度进行矩阵相乘，然后将结果累加求和，消除(收缩)这四个维度，矩阵a，b剩下的维度concat，就是所求矩阵维度"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a的shape: (2, 1, 3, 2)\n",
+      "b的shape: (2, 3, 1)\n",
+      "res1 shape: (2, 1, 1)\n",
+      "res2 shape: (2, 3, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = tf.constant([0,1,2,1,3,4,5,2,3,4,5,0],shape=[2,1,3,2])\n",
+    "b =tf.constant([1,3,2,3,1,2],shape=[2,3,1])\n",
+    "res1 = tf.tensordot(a,b,axes=2)\n",
+    "res2 = tf.tensordot(a,b,axes=[[1,3],[0,2]])\n",
+    "print(\"a的shape:\",a.shape)\n",
+    "print(\"b的shape:\",b.shape)\n",
+    "print(\"res1 shape:\",res1.shape)\n",
+    "print(\"res2 shape:\",res2.shape)"
    ]
   },
   {
@@ -753,6 +797,48 @@
     "# 归一化\n",
     "# tf.nn.l2_normalize(张量)：元素除以各自的范数"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Keras"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from tensorflow.python.keras import backend\n",
+    "# from tensorflow.python.keras.initializers import RandomNormal, Zeros, glorot_normal\n",
+    "# from tensorflow.python.keras.layers import Input, Lambda, Embedding, Layer, Flatten\n",
+    "    # Input中参数shape不包括batch size，例如shape=(32,) 表示了预期的输入将是一批32维的向量\n",
+    "    # Layer\n",
+    "        # bulid()\n",
+    "        # call()\n",
+    "# from tensorflow.python.keras.regularizers import l2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tf.keras.layers.Layer\n",
+    "# tf.keras.layers.Concatenate\n",
+    "# tf.keras.layers.add\n",
+    "# tf.keras.layers.Dense\n",
+    "# tf.keras.models.Model(inputs, outputs)\n",
+    "    # 首先定义好网络，再将网络的输入和输出部分作为参数定义一个Model类对象\n",
+    "    # model.compile()\n",
+    "    # model.fit()\n",
+    "        # verbose: 日志显示，0为不在标准输出流输出日志信息，1为输出进度条记录，2为每个epoch输出一行记录\n",
+    "    # model.predict()\n",
+    "# tf.keras.initializers.glorot_normal"
+   ]
   }
  ],
  "metadata": {
@@ -764,8 +850,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": ""
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.13"
   },
   "orig_nbformat": 4
  },
